# glass

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: go.yml
cmd/: glass.go
pkg/collectors/: collectors.go  cpu.go  disk.go  memory.go  network.go
pkg/resources/: collectors.go
python/ollama_wrapper/: README.md  pyproject.toml
python/ollama_wrapper/examples/: advanced_usage.py  basic_usage.py
python/ollama_wrapper/src/ollama_wrapper/: __init__.py  client.py  config.py  exceptions.py  types.py
python/ollama_wrapper/tests/: test_client.py
